# husn_product_mvp

./: .env.example  .env.prod.example  .env.staging.example  .gitignore  Caddyfile  DEPLOY.md  DISSERTATION_PROPOSAL.md  ENGINEERING_RULES.md  ONBOARDING.md  PITCH.md  PROGRESS.md  README.md  RESEND_DEBUG.md  STAGING.md  TENANCY.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  index.html  index.txt  knowledge.md  original-prompt.md  plan.md  prompt.md
.claude/: audit.sh  (+1 more)
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_raw_artifacts.py  0002_connections.py  0003_graph.py  0004_claims.py  0005_drift.py  0006_agent.py  0007_widen_rule_id.py  0008_chat.py  0009_tenancy.py  0010_tenancy_cutover.py  0011_password_auth.py  0012_finding_dispositions.py  0013_slack_identities.py  0014_usage_and_sync_settings.py  0015_pending_actions.py  0016_directory_contacts.py
api/husn/: digest.py  email_send.py  main.py  usage.py  workers.py
api/husn/agent/: chat.py  context.py  email_intent.py  finding_intent.py  llm.py  nli.py  prompts.py  render.py  run.py  run_v2.py  skeleton.py
api/husn/auth/: deps.py  emails.py  magic.py  passwords.py  scope.py  sessions.py
api/husn/claims/: base.py  extract.py  upsert.py
api/husn/connectors/: base.py
api/husn/core/: config.py  logging.py  oauth.py
api/husn/db/: models.py  session.py  upsert.py
api/husn/drift/: dispositions.py  evaluate.py  grouping.py
api/husn/graph/: emoji.py  identity.py  normalize.py  people_filter.py  projects.py  tenancy_context.py
(+182 files in other folders)
