[project]
name = "husn"
version = "0.0.1"
description = "husn.io API + workers"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "arq>=0.26",
  "httpx>=0.27",
  "structlog>=24.4",
  "python-multipart>=0.0.12",
  "dateparser>=1.2",
  "python-docx>=1.1",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["husn*"]

[tool.ruff]
line-length = 100
target-version = "py312"
